--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<style>
-		.ind {text-indent:35px}
-	</style>
-</head>
-<body>
-	<div style="text-align:center">
+	<head>
+		<meta charset="UTF-8">
+		<title>Document</title>
+		<link rel="stylesheet" href="styles/style.css">
+	</head>
+	<body>
 		<h1>Зуйкова Виктория Максимовна</h1>
-		<img src="img/22.jpg" height="150px" text-align="center" alt="My Fhoto">
-		<p>Студентка КПИ, Факультет Информатики и вычислительной техники</p>
-	</div>
-	<div style="margin-left: 30%; margin-right: 30%; ">
-		<hr width="550px">
-		<p style="text-indent:35px">Хочу учить фронтэнд, потому что:</p>
+		<img class="image" src="images/22.jpg" alt="My Fhoto">
+		<p class="center">Студентка КПИ, Факультет Информатики и вычислительной техники</p>
+		<hr>
+		<p>Хочу учить фронтэнд, потому что:</p>
 		<ul>
 			<li>одно из самых интересных направлений в сфере ИТ</li>
 			<li>хочу найти работу мечты</li>
 			<li>хочу зарабатывать на путешествия</li>
 		</ul>
-		<hr width="550px">
-		<p class="ind">Мой контактный телефон</p>
-		<p class="ind">+38(063) 491-90-09</p>
-		<p class="ind">Мой профиль ВК</p>
-		<p class="ind"><a href="https://vk.com/id128356142">vk.com</a></p>
-		<hr width="550px">
-		<p class="ind">Мой фибдек:</p>
-		<p class="ind">Уже могу сделать небольшой макет</p>
-
-	</div>
-	
-</body>
+		<hr>
+		<p>Мой контактный телефон</p>
+		<p>+38(063) 491-90-09</p>
+		<p>Мой профиль ВК</p>
+		<p><a href="https://vk.com/id128356142">vk.com</a></p>
+		<hr>
+		<p>Мой фибдек:</p>
+		<p>Уже могу сделать небольшой макет</p>
+	</body>
 </html>
