--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -6,23 +6,27 @@
 		<link rel="stylesheet" href="styles/style.css">
 	</head>
 	<body>
-		<h1>Зуйкова Виктория Максимовна</h1>
-		<img class="image" src="images/22.jpg" alt="My Fhoto">
-		<p class="center">Студентка КПИ, Факультет Информатики и вычислительной техники</p>
-		<hr>
-		<p>Хочу учить фронтэнд, потому что:</p>
-		<ul>
-			<li>одно из самых интересных направлений в сфере ИТ</li>
-			<li>хочу найти работу мечты</li>
-			<li>хочу зарабатывать на путешествия</li>
-		</ul>
-		<hr>
-		<p>Мой контактный телефон</p>
-		<p>+38(063) 491-90-09</p>
-		<p>Мой профиль ВК</p>
-		<p><a href="https://vk.com/id128356142">vk.com</a></p>
-		<hr>
-		<p>Мой фибдек:</p>
-		<p>Уже могу сделать небольшой макет</p>
+		<div class="page">
+			<div class="block0">
+				<h2>Зуйкова Виктория Максимовна</h2>
+				<img class="image" src="images/22.jpg" alt="My Fhoto">
+				<p class="center">Студентка КПИ, Факультет Информатики и вычислительной техники</p>
+			</div>
+			<div class="block1">
+				<p>Хочу учить фронтэнд, потому что:</p>
+				<ul>
+					<li>одно из самых интересных направлений в сфере ИТ</li>
+					<li>хочу найти работу мечты</li>
+					<li>хочу зарабатывать на путешествия</li>
+				</ul>
+			</div>
+			<div class="block1">
+				<p>Мой контактный телефон <br> +38(063) 491-90-09 </p>
+				<p>Мой профиль ВК <br><a href="https://vk.com/id128356142">vk.com</a></p>
+			</div>
+			<div class="block2">
+				<p>Мой фибдек: <br>Уже могу сделать небольшой макет </p>
+			</div>
+		</div>
 	</body>
 </html>
