--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -10,7 +10,7 @@
 			<div class="block0">
 				<h2>Зуйкова Виктория Максимовна</h2>
 				<img class="image" src="images/22.jpg" alt="My Fhoto">
-				<p class="center">Студентка КПИ, Факультет Информатики и вычислительной техники</p>
+				<p class="left">Студентка КПИ, Факультет Информатики и вычислительной техники</p>
 			</div>
 			<div class="block1">
 				<p>Хочу учить фронтэнд, потому что:</p>
