--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -8,48 +8,50 @@
 </head>
 <body>
 	<div class="page">
-		<div class="in_page">
-			<img class = "fitness" src="img/fitness.jpg" alt="logo">
-				<header>
-					<nav class="top_menu">
-						<ul>
-							<li><a href="#">Главная</a></li>
-							<li><a href="#">Товары</a></li>
-							<li><a href="#">О Нас</a></li>
-							<li><a href="#">Контакты</a></li>
-						</ul>
-					</nav>
-				</header>
-				<div>
-					<div class="left">
-						<ul>
-							<li><a href="#">Ноутбуки</a></li>
-							<li><a href="#">Планшеты</a></li>
-							<li><a href="#">Телефоны</a></li>
-							<li><a href="#">Телевизовы</a></li>
-							<li><a href="#">Бытовая техника</a></li>
-							<li><a href="#">Автотовары</a></li>
-						</ul>
-					</div>
-					<div>
-						<div class="block_img">
-							<img class="img" src="img/bicycle.jpg" alt="Bicycle">
-						</div>
-						<p class="text">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
-					</div>
-				</div>
-			<footer>
-				<div class="bottom_menu">
-					<p>2015 &copy; All rights reserved</p>
-					<ul>
-						<li><a href="#">Главная</a></li>
-						<li><a href="#">Товары</a></li>
-						<li><a href="#">О Нас</a></li>
-						<li><a href="#">Контакты</a></li>
-					</ul>
-				</div>
-			</footer>
+		<div class="logo">
+			<img src="img/fitness.jpg" alt="logo">
 		</div>
+		<header>
+			<nav class="top_menu">
+				<ul>
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Товары</a></li>
+					<li><a href="#">О Нас</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</nav>
+		</header>
+		<div class="container">
+			<div class="left">
+				<ul>
+					<li><a href="#">Ноутбуки</a></li>
+					<li><a href="#">Планшеты</a></li>
+					<li><a href="#">Телефоны</a></li>
+					<li><a href="#">Телевизоры</a></li>
+					<li><a href="#">Бытовая техника</a></li>
+					<li><a href="#">Автотовары</a></li>
+				</ul>
+			</div>
+			<div class="right">
+				<div class="bicycle">
+					<img class="img" src="img/bicycle.jpg" alt="Bicycle">
+				</div>
+				<div class="text">
+					<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
+				</div>
+			</div>
+		</div>
+		<footer>
+			<div class="bottom_menu">
+				<p>2015 &copy; All rights reserved</p>
+				<ul>
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Товары</a></li>
+					<li><a href="#">О Нас</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
