--- a/GoIT/markup/home/lesson3(dop)/index.html
+++ b/GoIT/markup/home/lesson3(dop)/index.html
@@ -7,52 +7,54 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="page">
-		<header>
-			<div class="header">
-				<div class="left">
-					<img class="logo" src="img/logo.png" alt="Logo">
+	<header>
+		<div class="header">
+			<div class="logo">
+				<img src="img/logo.png" alt="Logo">
+			</div>
+			<div class="right">
+				<p>Contact Us</p>
+				<p>+12 345 678 90</p>
+				<p>info@asia-holidays.com</p>
+			</div>
+		</div>
+	</header>
+		<div class="content">
+			<div class="left_col">
+				<div class="block">
+					<a href="#"><img class="img" src="img/india.jpg" alt="country"></a>
+					<p>India</p> 
 				</div>
-				<div class="right">
-					<p>Contact Us</p>
-					<p>+12 345 678 90</p>
-					<p>info@asia-holidays.com</p>
+				<div class="block">
+					<a href="#"><img class="img" src="img/nepal.jpg" alt="country"></a>
+					<p>Nepal</p>
 				</div>
 			</div>
-		</header>
-		<div class="centerWrapper">
-		<div class="pageContent">
-			<div class="smallBlocks">
-					<div >
-						<a href="#"><img class="img" src="img/india.jpg" alt="country"></a>
-						<p>India</p> 
-					</div>
-					<div >
-						<a href="#"><img class="img" src="img/nepal.jpg" alt="country"></a>
-						<p>Nepal</p>
-					</div>
-					<div >
-						<a href="#"><img class="img" src="img/tibet.jpg" alt="country"></a>
-						<p>Tibet</p>
-					</div>
-					<div>
-						<a href="#"><img class="img" src="img/bhutan.jpg" alt="country"></a>
-						<p>Bhutan</p>
-					</div>
-					<div >
-						<a href="#"><img class="img" src="img/lanka.jpg" alt="country"></a>
-						<p>Shri Lanka</p>
-					</div>
-					<div >
-						<a href="#"><img class="img" src="img/maldives.jpg" alt="country"></a>
-						<p>Maldives</p>
-					</div>
+			<div class="right_col">
+				<div class="block">
+					<a href="#"><img class="img" src="img/lanka.jpg" alt="country"></a>
+					<p>Shri Lanka</p>
+				</div>
+				<div class="block">
+					<a href="#"><img class="img" src="img/maldives.jpg" alt="country"></a>
+					<p>Maldives</p>
+				</div>
+			</div>
+			<div clas="center_col">
+				<div class="block">
+					<a href="#"><img class="img" src="img/tibet.jpg" alt="country"></a>
+					<p>Tibet</p>
+				</div>
+				<div class="block">
+					<a href="#"><img class="img" src="img/bhutan.jpg" alt="country"></a>
+					<p>Bhutan</p>
 				</div>
 			</div>
 		</div>
-			<footer>
-				<p class ="footer">Copyright (c) asia-holidays.com. 2010</p>
-			</footer>
-	</div>
-</body>
+		<footer>
+			<div class="footer">
+				<p>Copyright (c) asia-holidays.com. 2010</p>
+			</div>
+		</footer>
+	</body>
 </html>
