--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -10,11 +10,12 @@
 			<div class="block0">
 				<h2>Зуйкова Виктория Максимовна</h2>
 				<img class="image" src="images/22.jpg" alt="My Fhoto">
-				<p class="left">Студентка КПИ, Факультет Информатики и вычислительной техники</p>
+				<p class="left">Студентка КПИ, Факультет Информатики и вычислительной техники</p
 			</div>
 			<div class="block1">
 				<p>Хочу учить фронтэнд, потому что:</p>
 				<ul>
+
 					<li>одно из самых интересных направлений в сфере ИТ</li>
 					<li>хочу найти работу мечты</li>
 					<li>хочу зарабатывать на путешествия</li>
