--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -21,7 +21,7 @@
 				</ul>
 			</nav>
 		</header>
-		<div class="container">
+		<div class="clearfix">
 			<div class="left">
 				<ul>
 					<li><a href="#">Ноутбуки</a></li>
