--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -12,7 +12,7 @@
 			<img src="img/fitness.jpg" alt="logo">
 		</div>
 		<header>
-			<nav class="top_menu">
+			<nav class="top_menu clearfix">
 				<ul>
 					<li><a href="#">Главная</a></li>
 					<li><a href="#">Товары</a></li>
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<footer>
-			<div class="bottom_menu">
+			<div class="bottom_menu clearfix">
 				<p>2015 &copy; All rights reserved</p>
 				<ul>
 					<li><a href="#">Главная</a></li>
