--- a/GoIT/markup/home/lesson3(dop)/index.html
+++ b/GoIT/markup/home/lesson3(dop)/index.html
@@ -8,46 +8,40 @@
 </head>
 <body>
 	<header>
-		<div class="header">
-			<div class="logo">
-				<img src="img/logo.png" alt="Logo">
+		<div class="header clearfix">
+			<div class="logo clearfix">
+				<!-- <img src="img/logo.png" alt="Logo"> -->
 			</div>
-			<div class="right">
-				<p>Contact Us</p>
+			<div class="right clearfix">
+				<p class="bold">Contact Us</p>
 				<p>+12 345 678 90</p>
 				<p>info@asia-holidays.com</p>
 			</div>
 		</div>
 	</header>
-		<div class="content">
-			<div class="left_col">
+		<div class="content clearfix">
+			<div class="left_col clearfix">
 				<div class="block">
-					<a href="#"><img class="img" src="img/india.jpg" alt="country"></a>
-					<p>India</p> 
+					<a href="#"><img class="img" src="img/india.png" alt="country">India</a>
 				</div>
 				<div class="block">
-					<a href="#"><img class="img" src="img/nepal.jpg" alt="country"></a>
-					<p>Nepal</p>
+					<a href="#"><img class="img" src="img/nepal.png" alt="country">Nepal</a>
 				</div>
 			</div>
-			<div class="right_col">
+			<div class="right_col clearfix">
 				<div class="block">
-					<a href="#"><img class="img" src="img/lanka.jpg" alt="country"></a>
-					<p>Shri Lanka</p>
+					<a href="#"><img class="img" src="img/lanka.png" alt="country">Lanka</a>
 				</div>
 				<div class="block">
-					<a href="#"><img class="img" src="img/maldives.jpg" alt="country"></a>
-					<p>Maldives</p>
+					<a href="#"><img class="img" src="img/maldives.png" alt="country">Maldives</a>
 				</div>
 			</div>
-			<div clas="center_col">
+			<div clas="center_col clearfix">
 				<div class="block">
-					<a href="#"><img class="img" src="img/tibet.jpg" alt="country"></a>
-					<p>Tibet</p>
+					<a href="#"><img class="img" src="img/tibet.png" alt="country">Tibet</a>
 				</div>
 				<div class="block">
-					<a href="#"><img class="img" src="img/bhutan.jpg" alt="country"></a>
-					<p>Bhutan</p>
+					<a href="#"><img class="img" src="img/bhutan.png" alt="country">Bhutan</a>
 				</div>
 			</div>
 		</div>
