--- a/GoIT/markup/home/lesson3(dop)/index.html
+++ b/GoIT/markup/home/lesson3(dop)/index.html
@@ -9,18 +9,18 @@
 <body>
 	<header>
 		<div class="header clearfix">
-			<div class="logo clearfix">
+			<div class="logo">
 				<!-- <img src="img/logo.png" alt="Logo"> -->
 			</div>
-			<div class="right clearfix">
+			<div class="right">
 				<p class="bold">Contact Us</p>
 				<p>+12 345 678 90</p>
 				<p>info@asia-holidays.com</p>
 			</div>
 		</div>
 	</header>
-		<div class="content clearfix">
-			<div class="left_col clearfix">
+		<div class="content">
+			<div class="left_col">
 				<div class="block">
 					<a href="#"><img class="img" src="img/india.png" alt="country">India</a>
 				</div>
@@ -28,7 +28,7 @@
 					<a href="#"><img class="img" src="img/nepal.png" alt="country">Nepal</a>
 				</div>
 			</div>
-			<div class="right_col clearfix">
+			<div class="right_col">
 				<div class="block">
 					<a href="#"><img class="img" src="img/lanka.png" alt="country">Lanka</a>
 				</div>
@@ -36,7 +36,7 @@
 					<a href="#"><img class="img" src="img/maldives.png" alt="country">Maldives</a>
 				</div>
 			</div>
-			<div clas="center_col clearfix">
+			<div clas="center_col">
 				<div class="block">
 					<a href="#"><img class="img" src="img/tibet.png" alt="country">Tibet</a>
 				</div>
