--- a/GoIT/markup/home/lesson3(dop)/index.html
+++ b/GoIT/markup/home/lesson3(dop)/index.html
@@ -19,7 +19,7 @@
 			</div>
 		</div>
 	</header>
-		<div class="content">
+		<div class="content clearfix">
 			<div class="left_col">
 				<div class="block">
 					<a href="#"><img class="img" src="img/india.png" alt="country">India</a>
