--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="page">
-		<header>
+		<header class="clearfix">
 			<div class="contacts clearfix">
 				<p class="bold">Наши контакты</b></p>
 				<p>+9-098-765-4321</p>
@@ -17,19 +17,22 @@
 			</div>
 			<div class="menu clearfix">
 				<ul>
-					<li><a href="#"><img class="items" src="img/i.png" alt="">Индия</a></li>
-					<li><a href="#"><img class="items" src="img/n.png" alt="">Непал</a></li>
-					<li><a href="#"><img class="items" src="img/t.png" alt="">Тибет</a></li>
-					<li><a href="#"><img class="items" src="img/b.png" alt="">Бутан</a></li>
-					<li><a href="#"><img class="items" src="img/sh.png" alt="">Шри-Ланка</a></li>
-					<li><a href="#"><img class="items" src="img/m.png" alt="">Мальдивы</a></li>
+					<li><a href="#"><img class="items" src="img/i.png" alt=""><span>Индия</span></a></li>
+					<li><a href="#"><img class="items" src="img/n.png" alt=""><span>Непал</span></a></li>
+					<li><a href="#"><img class="items" src="img/t.png" alt=""><span>Тибет</span></a></li>
+					<li><a href="#"><img class="items" src="img/b.png" alt=""><span>Бутан</span></a></li>
+					<li><a href="#"><img class="items" src="img/sh.png" alt=""><span>Шри-Ланка</span></a></li>
+					<li><a href="#"><img class="items" src="img/m.png" alt=""><span>Мальдивы</span></a></li>
 				</ul>
 			</div>
-			<img class="logo clearfix" src="img/logo.png" alt="logo">
+			<div class="logo clearfix">
+				<img src="img/logo.png" alt="logo">
+			</div>
 		</header>
-		<article>
-			<img class="photo" src="img/main_photo.jpg" alt="main_photo">
-			<div class="wrapper">
+		<div class="photo">
+			<img src="img/main_photo.jpg" alt="main_photo">
+		</div>
+		<div class="wrapper">
 				<ul class="menu_panel clearfix">
 					<li>
 						<a href="">Главная</a>
@@ -61,7 +64,6 @@
 					</li>
 				</ul>
 			</div>
-		</article>
 		<div class="table clearfix">
 			<div class="leftColumn">
 				<p class="text">Информация</p>
@@ -107,3 +109,51 @@
 	</footer>
 </body>
 </html>
+
+
+
+
+<tr>
+			<td rowspan="2"></td>
+			<td class="red" colspan="4" rowspan="4"></td>
+			<td class="yellow" colspan="2"></td>
+		</tr>
+		<tr>
+			<td colspan="2"</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td rowspan="2"></td>
+			<td rowspan="2"></td>
+		</tr>
+		<tr>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td class="black"></td>
+			<td class="black"></td>
+			<td colspan="2"></td>
+			<td colspan="2"></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td class="black"></td>
+			<td class="black"></td>
+			<td colspan="2"></td>
+			<td class="blue" colspan="2" rowspan="2"></td>
+		</tr>
+		<tr>
+			<td class="yellow" rowspan="2"></td>
+			<td colspan="2"></td>
+			<td class="black" colspan="2"></td>
+			
+		</tr>
+		<tr>
+			<td colspan="2"></td>
+			
+			<td></td>
+			<td></td>
+			
+			<td colspan="2"></td>
+		</tr>
