--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -9,23 +9,25 @@
 <body>
 	<div class="page">
 		<header class="clearfix">
-			<div class="contacts clearfix">
-				<p class="bold">Наши контакты</b></p>
-				<p>+9-098-765-4321</p>
-				<p>+9-0123-456-890</p>
-				<p>info@asia-holidays.com</p>
+			<div class="right">
+				<div class="contacts">
+					<p class="bold">Наши контакты</b></p>
+					<p>+9-098-765-4321</p>
+					<p>+9-0123-456-890</p>
+					<p>info@asia-holidays.com</p>
+				</div>
+				<div class="menu">
+					<ul>
+						<li><a href="#"><img class="items" src="img/i.png" alt=""><span>Индия</span></a></li>
+						<li><a href="#"><img class="items" src="img/n.png" alt=""><span>Непал</span></a></li>
+						<li><a href="#"><img class="items" src="img/t.png" alt=""><span>Тибет</span></a></li>
+						<li><a href="#"><img class="items" src="img/b.png" alt=""><span>Бутан</span></a></li>
+						<li><a href="#"><img class="items" src="img/sh.png" alt=""><span>Шри-Ланка</span></a></li>
+						<li><a href="#"><img class="items" src="img/m.png" alt=""><span>Мальдивы</span></a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="menu clearfix">
-				<ul>
-					<li><a href="#"><img class="items" src="img/i.png" alt=""><span>Индия</span></a></li>
-					<li><a href="#"><img class="items" src="img/n.png" alt=""><span>Непал</span></a></li>
-					<li><a href="#"><img class="items" src="img/t.png" alt=""><span>Тибет</span></a></li>
-					<li><a href="#"><img class="items" src="img/b.png" alt=""><span>Бутан</span></a></li>
-					<li><a href="#"><img class="items" src="img/sh.png" alt=""><span>Шри-Ланка</span></a></li>
-					<li><a href="#"><img class="items" src="img/m.png" alt=""><span>Мальдивы</span></a></li>
-				</ul>
-			</div>
-			<div class="logo clearfix">
+			<div class="logo">
 				<img src="img/logo.png" alt="logo">
 			</div>
 		</header>
