--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -9,8 +9,10 @@
 <body>
 	<header>
 		<div class="menu1 clearfix">
+			<div class="oe">
+				<p>Ola! <a href="#">Entrar</a> ou <a href="#">Codastre-se</a></p>
+			</div>
 			<ul>
-				<li><a href="#" class="oe">Ola! <u>Entrar</u> ou <u>Cadastre-se</u></a></li>
 				<li><a href="#" class="mo">Minhas Ofertas</a></li>
 				<li><img class="flag" src="img/flag.png" alt="flag"></li>
 				<li><img class="palka" src="img/palka.png" alt="palka"></li>
@@ -28,9 +30,12 @@
 	</header>
 	<div class="panel clearfix">
 		<p class="title">Codastre-se</p>
-		<a href="#"><img class="img" src="img/fb.png" alt="fb"></a>
-		<a href="#"><img class="img" src="img/poloska.png" alt="fb"></a>
-		<p class="or">OR</p>
+		<div class="button">
+			<div class="lb"><p>f</p></div>
+			<div class="rb"><a href="#">Log In with Facebook<img class="strelka" src="img/strelka.png"></a></div>
+		</div>
+		<a href="#"><img class="poloska2" src="img/poloska.png" alt="fb"></a>
+		<p class="ou">OU</p>
 		<form action="#" method="POST">
 			<input type="text" value="First Name" name="fname">
 			<input type="text" value="Last Name" name="lname">
