--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -37,32 +37,32 @@
 		<div class="wrapper">
 				<ul class="menu_panel clearfix">
 					<li>
-						<a href="">Главная</a>
+						<a href=""><span>Главная</span></a>
 					</li>
 					<li>
-						<a href="">Путешествие<img class="st" src="img/triangle.png" alt="triangle"></a>
+						<a href=""><span>Путешествие &#9662</span></a>
 						<ul>
-							<li><a href="">Путешествие 1</a></li>
-							<li><a href="">Путешествие 2</a></li>
-							<li><a href="">Путешествие 3</a></li>
-							<li><a href="">Путешествие 4</a></li>
-							<li><a href="">Путешествие 5</a></li>
+							<li><a href=""><span>Путешествие 1</span></a></li>
+							<li><a href=""><span>Путешествие 2</span></a></li>
+							<li><a href=""><span>Путешествие 3</span></a></li>
+							<li><a href=""><span>Путешествие 4</span></a></li>
+							<li><a href=""><span>Путешествие 5</span></a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="">Услуги<img class="st" src="img/triangle.png" alt="triangle"></a>
+						<a href=""><span>Услуги &#9662</span></a>
 					</li>
 					<li>
-						<a href="">Партнерам<img class="st" src="img/triangle.png" alt="triangle"></a>
+						<a href=""><span>Партнерам &#9662</span></a>
 					</li>
 					<li>
-						<a href="">Отзывы клиентов</a>
+						<a href=""><span>Отзывы клиентов</span></a>
 					</li>
 					<li>
-						<a href="">О нас</a>
+						<a href=""><span>О нас</span></a>
 					</li>
 					<li>
-						<a href="">Контакты</a>
+						<a href=""><span>Контакты</span></a>
 					</li>
 				</ul>
 			</div>
