--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<div class="menu1 clearfix">
+		<div class="top_menu clearfix">
 			<div class="oe">
 				<p>Ola! <a href="#">Entrar</a> ou <a href="#">Codastre-se</a></p>
 			</div>
@@ -29,23 +29,29 @@
 		</div>
 	</header>
 	<div class="panel clearfix">
-		<p class="title">Codastre-se</p>
-		<div class="button">
-			<div class="lb"><p>f</p></div>
-			<div class="rb"><a href="#">Log In with Facebook<img class="strelka" src="img/strelka.png"></a></div>
+		<div class="b_panel">
+			<div class="b_panel1">
+				<p class="title">Codastre-se</p>
+			</div>
+			<div class="b_panel2">
+				<div class="button">
+				<div class="lb"><p>f</p></div>
+				<div class="rb"><a href="#">Log In with Facebook<img class="strelka" src="img/strelka.png"></a></div>
+			</div>
+			<a href="#"><img class="poloska2" src="img/poloska.png" alt="fb"></a>
+			<p class="ou">OU</p>
+			<form action="#" method="POST">
+				<input type="text" value="First Name" name="fname">
+				<input type="text" value="Last Name" name="lname">
+				<input type="text" value="Email Address" name="email">
+				<input type="text" value="Choose Password" name="pas">
+				<input type="text" value="Password Confirm" name="pas2">
+				<label><input type="checkbox" id="cbox1">Send me Youbike updates and tips</label>
+				<input type="submit" class="create" value="Create My Account">
+			</form>
+			<p class="sign">By clicking the button above, you agree to the Terms of Service<br> Xiew our Privacy Policy.</p>
 		</div>
-		<a href="#"><img class="poloska2" src="img/poloska.png" alt="fb"></a>
-		<p class="ou">OU</p>
-		<form action="#" method="POST">
-			<input type="text" value="First Name" name="fname">
-			<input type="text" value="Last Name" name="lname">
-			<input type="text" value="Email Address" name="email">
-			<input type="text" value="Choose Password" name="pas">
-			<input type="text" value="Password Confirm" name="pas2">
-			<label><input type="checkbox" id="cbox1">Send me Youbike updates and tips</label>
-			<input type="submit" class="create" value="Create My Account">
-		</form>
-		<p class="sign">By clicking the button above, you agree to the Terms of Service<br> Xiew our Privacy Policy.</p>
+		</div>
 	</div>
 </body>
 </html>
