--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -7,27 +7,21 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header>
-		<div class="top_menu clearfix">
-			<div class="oe">
-				<p>Ola! <a href="#">Entrar</a> ou <a href="#">Codastre-se</a></p>
-			</div>
-			<ul>
-				<li><a href="#" class="mo">Minhas Ofertas</a></li>
-				<li><img class="flag" src="img/flag.png" alt="flag"></li>
-				<li><img class="palka" src="img/palka.png" alt="palka"></li>
-			</ul>
-			<div class="menu">
-				<ul>
-					<li><a href="#">Ajuda</a></li>
-					<li><a href="#">Contato</a></li>
-					<li><a href="#">Forum</a></li>
-					<li><a href="#">Vender</a></li>
-					<li><a href="#">Meu YouBike</a></li>
-				</ul>
-			</div>
+	<div class="top_menu clearfix">
+		<div class="oe">
+			<p>Ola! <a href="#">Entrar</a> ou <a href="#">Codastre-se</a></p>
 		</div>
-	</header>
+		<p class="mo">Minhas Ofertas</li>
+		<div class="menu">
+			<ul>
+				<li><a href="#">Ajuda</a></li>
+				<li><a href="#">Contato</a></li>
+				<li><a href="#">Forum</a></li>
+				<li><a href="#">Vender</a></li>
+				<li><a href="#">Meu YouBike</a></li>
+			</ul>
+		</div>
+	</div>
 	<div class="panel clearfix">
 		<div class="b_panel">
 			<div class="b_panel1">
@@ -35,17 +29,15 @@
 			</div>
 			<div class="b_panel2">
 				<div class="button">
-				<div class="lb"><p>f</p></div>
-				<div class="rb"><a href="#">Log In with Facebook<img class="strelka" src="img/strelka.png"></a></div>
+				<a href="#" class="log">Log In with Facebook</a>
 			</div>
-			<a href="#"><img class="poloska2" src="img/poloska.png" alt="fb"></a>
 			<p class="ou">OU</p>
 			<form action="#" method="POST">
-				<input type="text" value="First Name" name="fname">
-				<input type="text" value="Last Name" name="lname">
-				<input type="text" value="Email Address" name="email">
-				<input type="text" value="Choose Password" name="pas">
-				<input type="text" value="Password Confirm" name="pas2">
+				<input type="text" placeholder="First Name" name="fname">
+				<input type="text" placeholder="Last Name" name="lname">
+				<input type="text" placeholder="Email Address" name="email">
+				<input type="text" placeholder="Choose Password" name="pas">
+				<input type="text" placeholder="Password Confirm" name="pas2">
 				<label><input type="checkbox" id="cbox1">Send me Youbike updates and tips</label>
 				<input type="submit" class="create" value="Create My Account">
 			</form>
