--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -11,7 +11,7 @@
 		<div class="oe">
 			<p>Ola! <a href="#">Entrar</a> ou <a href="#">Codastre-se</a></p>
 		</div>
-		<p class="mo">Minhas Ofertas</li>
+		<p class="mo">Minhas Ofertas</p>
 		<div class="menu">
 			<ul>
 				<li><a href="#">Ajuda</a></li>
