--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
 	<div class="top_menu clearfix">
-		<div class="oe">
-			<p>Ola! <a href="#">Entrar</a> ou <a href="#">Codastre-se</a></p>
-		</div>
-		<p class="mo">Minhas Ofertas</p>
-		<div class="menu">
-			<ul>
-				<li><a href="#">Ajuda</a></li>
-				<li><a href="#">Contato</a></li>
-				<li><a href="#">Forum</a></li>
-				<li><a href="#">Vender</a></li>
-				<li><a href="#">Meu YouBike</a></li>
-			</ul>
+		<div class="wid">
+			<div class="oe">
+				<p>Ola! <a href="#">Entrar</a> ou <a href="#">Codastre-se</a></p>
+			</div>
+			<p class="mo">Minhas Ofertas</p>
+			<div class="menu">
+				<ul>
+					<li><a href="#">Ajuda</a></li>
+					<li><a href="#">Contato</a></li>
+					<li><a href="#">Forum</a></li>
+					<li><a href="#">Vender</a></li>
+					<li><a href="#">Meu YouBike</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="panel clearfix">
