--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -45,9 +45,9 @@
 			<div class="bottom_menu clearfix">
 				<p>2015 &copy; All rights reserved</p>
 				<ul>
-					<li><a href="#">Главная</a></li>
-					<li><a href="#">Товары</a></li>
-					<li><a href="#">О Нас</a></li>
+					<li><a href="#">Главная &#124</a></li>
+					<li><a href="#">Товары &#124</a></li>
+					<li><a href="#">О Нас &#124</a></li>
 					<li><a href="#">Контакты</a></li>
 				</ul>
 			</div>
