--- a/GoIT/markup/home/lesson6/index.html
+++ b/GoIT/markup/home/lesson6/index.html
@@ -7,6 +7,180 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
-</body>
+	<header class="clearfix">
+		<span class="phone">(044)123-45-67 (044)567-89-10</span>
+		<div class="login">
+			<span class="person"><img src="img/person.png" alt="person"></span>
+			<input type="text" placeholder="логин" name="login">
+			<input type="password" placeholder="пароль" name="parol">
+			<a href="#"class="text poloska">вход |</a>
+			<a href="#" class="text">регистрация</a>
+			<a href="#" class="for_pas">забыли пароль?</a>
+		</div>
+		<div class="buttons">
+			<a href="#"><img src="img/home.png" class="button" alt="home"></a>
+			<a href="#"><img src="img/karta_s.png" class="button" alt="karta"></a>
+			<a href="#"><img src="img/convert.png" class="button" alt="convert"></a>
+		</div>
+	</header>
+	<div class="main_img">
+		<img src="img/main_img.jpg" alt="main_img">
+	</div>
+	<nav class="main_menu clearfix">
+		<div class="right">
+			<span class="b_text ots korzina">товаров:</span>
+			<span class="w_text">0</span>
+			<span class="b_text ots">на сумму:</span>
+			<span class="w_text">0.00 грн</span>
+		</div>
+			<ul class="cent_menu">
+				<li><a href="#">о компании</a></li>
+				<li><a href="#">оплата</a></li>
+				<li><a href="#">доставка</a></li>
+				<li><a href="#">статьи</a></li>
+				<li><a href="#">контакты</a></li>
+			</ul>
+	</nav>
+	<section class="clearfix">
+		<div class="right_col">
+			<span class="kat_prod">бренды:</span>
+			<div class="chbox">
+				<div class="shini"><span>шины</span></div>
+				<div class="chbox1">
+					<input id="check1" type="checkbox" name="check" value="check1">
+					<label for="check1">Бренд 1</label>
+					<input id="check2" type="checkbox" name="check" value="check2">
+					<label for="check2">Бренд 2</label>
+					<input id="check3" type="checkbox" name="check" value="check3">
+					<label for="check3">Бренд 3</label>
+				</div>
+				<div class="shini"><span>диски</span></div>
+				<div class="chbox1">
+					<input id="check4" type="checkbox" name="check" value="check4">
+					<label for="check4">Бренд 1</label>
+					<input id="check5" type="checkbox" name="check" value="check5">
+					<label for="check5">Бренд 2</label>
+					<input id="check6" type="checkbox" name="check" value="check6">
+					<label for="check6">Бренд 3</label>
+				</div>
+			</div>
+			<input type="button" value="выбрать">
+			</div>
+		</div>
+		<div class="left_col">
+			<span class="kat_prod">каталог продукции:</span>
+			<div class="shini"><span>шины</span></div>
+				<div class="shini_menu">
+				<ul>
+					<li><a href="#">Наименование 1</a></li>
+					<li><a href="#">Наименование 2</a></li>
+					<li><a href="#">Наименование 3</a></li>
+					<li><a href="#">Наименование 4</a></li>
+				</ul>
+			</div>
+			<div class="shini"><span>болты</span></div>
+				<div class="shini_menu">
+				<ul>
+					<li><a href="#">Наименование 1</a></li>
+					<li><a href="#">Наименование 2</a></li>
+					<li><a href="#">Наименование 3</a></li>
+					<li><a href="#">Наименование 4</a></li>
+				</ul>
+			</div>
+			<div class="shini"><span>диски</span></div>
+				<div class="shini_menu">
+				<ul>
+					<li><a href="#">Наименование 1</a></li>
+					<li><a href="#">Наименование 2</a></li>
+					<li><a href="#">Наименование 3</a></li>
+					<li><a href="#">Наименование 4</a></li>
+				</ul>
+			</div>
+			
+		</div>
+		<div class="center_col">
+			<div class="col1">
+				<figure>
+					<figcaption class="firm_t">Goodyear</figcaption>
+					<figcaption class="opis_t">Ultra Grip Extreme</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">90.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<figcaption class="firm_t">Goodyear</figcaption>
+					<figcaption class="opis_t">Ultra Grip Extreme</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">90.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<figcaption class="firm_t">Goodyear</figcaption>
+					<figcaption class="opis_t">Ultra Grip Extreme</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">90.00 грн.</figcaption>
+				</figure>
+			</div>
+			<div class="col2">
+				<figure>
+					<figcaption class="firm_t">Nokian</figcaption>
+					<figcaption class="opis_t">Hakkapeiitta R</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">115.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<figcaption class="firm_t">Nokian</figcaption>
+					<figcaption class="opis_t">Hakkapeiitta R</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">115.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<figcaption class="firm_t">Nokian</figcaption>
+					<figcaption class="opis_t">Hakkapeiitta R</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">115.00 грн.</figcaption>
+				</figure>
+			</div>
+			<div class="col3">
+				<figure>
+					<figcaption class="firm_t">Hankook</figcaption>
+					<figcaption class="opis_t">K 708 155/65 R14</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">394.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<figcaption class="firm_t">Hankook</figcaption>
+					<figcaption class="opis_t">K 708 155/65 R14</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">394.00 грн.</figcaption>
+				</figure>
+				<figure>
+					<figcaption class="firm_t">Hankook</figcaption>
+					<figcaption class="opis_t">K 708 155/65 R14</figcaption>
+					<img src="img/koleso.png" alt="koleso">
+					<figcaption class="price_t">394.00 грн.</figcaption>
+				</figure>
+			</div>
+		</div>
+	</section>
+	<aside>
+		<ul>
+			<li><a href="#"><img src="img/f1.png" alt="f"></a></li>
+			<li><a href="#"><img src="img/f2.png" alt="f"></a></li>
+			<li><a href="#"><img src="img/f3.png" alt="f"></a></li>
+			<li><a href="#"><img src="img/f4.png" alt="f"></a></li>
+			<li><a href="#"><img src="img/f5.png" alt="f"></a></li>
+			<li><a href="#"><img src="img/f6.png" alt="f"></a></li>
+			<li><a href="#"><img src="img/f7.png" alt="f"></a></li>
+			<li><a href="#"><img src="img/f8.png" alt="f"></a></li>
+		</ul>
+	</aside>
+	<footer>
+		<ul>
+			<li><a href="#">О компании</a></li>
+			<li><a href="#">Доставка</a></li>
+			<li><a href="#">Статьи</a></li>
+			<li><a href="#">Контакты</a></li>
+		</ul>
+		<p>Создание сайта &copy Global Vision</p>
+	</footer>
+
 </html>
