--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -8,9 +8,9 @@
 	<body>
 		<div class="page">
 			<div class="block0">
-				<h2>Зуйкова Виктория Максимовна</h2>
+				<h2>Зуйкова Виктория Максимовна Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, nesciunt aut quis amet magnam eum. Accusantium magnam fugiat saepe temporibus, facilis magni alias molestias exercitationem quo fuga hic cupiditate at.</h2>
 				<img class="image" src="images/22.jpg" alt="My Fhoto">
-				<p class="left">Студентка КПИ, Факультет Информатики и вычислительной техники</p
+				<p class="left">Студентка КПИ, Факультет Информатики и вычислительной техники</p>
 			</div>
 			<div class="block1">
 				<p>Хочу учить фронтэнд, потому что:</p>
