--- a/GoIT/markup/home/lesson6/index.html
+++ b/GoIT/markup/home/lesson6/index.html
@@ -10,13 +10,12 @@
 	<header class="clearfix">
 		<span class="phone">(044)123-45-67 (044)567-89-10</span>
 		<div class="login">
-			<form action="#">
-				<input type="text" placeholder="логин" name="login">
-				<input type="password" placeholder="пароль" name="parol">
-			</form>
-			<a href="#"class="text poloska">вход</a>
+			<span class="person"><img src="img/person.png" alt="person"></span>
+			<input type="text" placeholder="логин" name="login">
+			<input type="password" placeholder="пароль" name="parol">
+			<a href="#"class="text poloska">вход |</a>
 			<a href="#" class="text">регистрация</a>
-			<a href="#" class="text">забыли пароль?</a>
+			<a href="#" class="for_pas">забыли пароль?</a>
 		</div>
 		<div class="buttons">
 			<a href="#"><img src="img/home.png" class="button" alt="home"></a>
@@ -100,61 +99,67 @@
 			
 		</div>
 		<div class="center_col">
+			<div class="col1">
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Goodyear</a></figcaption>
+					<figcaption class="firm_t">Goodyear</figcaption>
 					<figcaption class="opis_t">Ultra Grip Extreme</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">90.00 грн.</figcaption>
 				</figure>
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Goodyear</a></figcaption>
+					<figcaption class="firm_t">Goodyear</figcaption>
 					<figcaption class="opis_t">Ultra Grip Extreme</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">90.00 грн.</figcaption>
 				</figure>
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Goodyear</a></figcaption>
+					<figcaption class="firm_t">Goodyear</figcaption>
 					<figcaption class="opis_t">Ultra Grip Extreme</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">90.00 грн.</figcaption>
 				</figure>
+			</div>
+			<div class="col2">
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Nokian</a></figcaption>
+					<figcaption class="firm_t">Nokian</figcaption>
 					<figcaption class="opis_t">Hakkapeiitta R</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">115.00 грн.</figcaption>
 				</figure>
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Nokian</a></figcaption>
+					<figcaption class="firm_t">Nokian</figcaption>
 					<figcaption class="opis_t">Hakkapeiitta R</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">115.00 грн.</figcaption>
 				</figure>
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Nokian</a></figcaption>
+					<figcaption class="firm_t">Nokian</figcaption>
 					<figcaption class="opis_t">Hakkapeiitta R</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">115.00 грн.</figcaption>
 				</figure>
+			</div>
+			<div class="col3">
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Hankook</a></figcaption>
+					<figcaption class="firm_t">Hankook</figcaption>
 					<figcaption class="opis_t">K 708 155/65 R14</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">394.00 грн.</figcaption>
 				</figure>
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Hankook</a></figcaption>
+					<figcaption class="firm_t">Hankook</figcaption>
 					<figcaption class="opis_t">K 708 155/65 R14</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">394.00 грн.</figcaption>
 				</figure>
 				<figure>
-					<figcaption class="firm_t"><a href ="#">Hankook</a></figcaption>
+					<figcaption class="firm_t">Hankook</figcaption>
 					<figcaption class="opis_t">K 708 155/65 R14</figcaption>
-					<div><img src="img/koleso.png" alt="koleso"></div>
+					<img src="img/koleso.png" alt="koleso">
 					<figcaption class="price_t">394.00 грн.</figcaption>
 				</figure>
 			</div>
+		</div>
 	</section>
 	<aside>
 		<ul>
