--- a/GoIT/markup/home/Html.Css/exam/index.html
+++ b/GoIT/markup/home/Html.Css/exam/index.html
@@ -25,14 +25,13 @@
 						<li class="menu_item"><a href="" class="menu_link">Dolor Sei Amet</a></li>
 					</ul>
 				</div>
-			<div class="slider">
+			<div class="slider clearfix">
 				<div class="slider_phone"><img src="img/phone.png"></div>
 				<div class="slider_item">
 					<p class="slider_text1">Lorem Ipsum Dolor</p>
 					<p class="slider_text2">It will makes all of your dreams come</p>
 					<p class="slider_text3">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.</p>
 				</div>
-
 				<ul class="slider_buttons">
 					<li></li>
 					<li class="current"></li>
@@ -67,7 +66,6 @@
 		<div class="wrapper">
 			<div class="slider slider--content">
 				<div class="slider_item">
-					<img src="img/face.png"class = "slider_image" alt="">
 					<h3 class="slider_title">Pingbuller <span>starts here</span></h3>
 					<p class="slider_text">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
 				</div>
@@ -81,17 +79,14 @@
 			<div class="updates clearfix">
 				<h3 class="updates_title">Resent updates</h3>
 				<div class="updates_item clearfix">
-					<img src="img/round_icons.png"class="updates_image" alt="">
 					<h4 class="updates_subtitle">Nunc turpis neque feugiat eget</h4>
 					<p class="updates_info">Posted by Admin on March 13 2012</p>
 				</div>
 				<div class="updates_item clearfix">
-					<img src="img/round_icons.png" class="updates_image" alt="">
 					<h4 class="updates_subtitle">Nunc turpis neque feugiat eget</h4>
 					<p class="updates_info">Posted by Admin on March 13 2012</p>
 				</div>
 				<div class="updates_item clearfix">
-					<img src="img/round_icons.png" class="updates_image" alt="">
 					<h4 class="updates_subtitle">Nunc turpis neque feugiat eget</h4>
 					<p class="updates_info">Posted by Admin on March 13 2012</p>
 				</div>
