--- a/GoIT/markup/home/JavaScript/lesson 11-12/1.2 Шаблонизатор/index.html
+++ b/GoIT/markup/home/JavaScript/lesson 11-12/1.2 Шаблонизатор/index.html
@@ -13,7 +13,7 @@
 	<div class="page">
 			<div class="block0">
 				<h2><%= name%></h2>
-				<img class="image" src="images/22.jpg" alt="My Fhoto">
+				<img class="image" src="img/22.jpg" alt="My Fhoto">
 				<p class="left"><%= university%></p>
 			</div>
 			<div class="block1">
