--- a/GoIT/markup/home/JavaScript/lesson 11-12/1.2 Шаблонизатор/index.html
+++ b/GoIT/markup/home/JavaScript/lesson 11-12/1.2 Шаблонизатор/index.html
@@ -14,7 +14,7 @@
 	
 	 	<div class="page">
 	 		<div class="block1">
-	 			<h2><%- ФИО %></h2>
+	 			<h2><%= <%- ФИО %> %></h2>
 	 			<img class="image" src=<%= img %> alt="photo"/>
 	 			<p class="left"><%= university %></p>
 	 		</div>
