--- a/GoIT/markup/home/JavaScript/lesson 11-12/1.2 Шаблонизатор/index.html
+++ b/GoIT/markup/home/JavaScript/lesson 11-12/1.2 Шаблонизатор/index.html
@@ -14,7 +14,7 @@
 	
 	 	<div class="page">
 	 		<div class="block1">
-	 			<h2><%= name %></h2>
+	 			<h2><%- ФИО %></h2>
 	 			<img class="image" src=<%= img %> alt="photo"/>
 	 			<p class="left"><%= university %></p>
 	 		</div>
@@ -35,7 +35,7 @@
 
 	 		<div class="block1">
 	 			<p><%=  profile %></p>
-	 			<p><a href="<%= link %>"></a><%=  mainLink %></p>
+	 			<p><a href="<%= link %>"><%=  mainLink %></a></p>
 	 		</div>
 
 	 		<div class="block2">
